<resources>
    <string name="app_name">WhichMovie</string>
    <string name="username">用户名：</string>
    <string name="hint_username">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="hint_password">请输入密码</string>
    <string name="remember">记住密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="test">测试</string>
    <string name="random">随机选择</string>
    <string name="watched">已观看</string>
    <string name="random_select">翻一部</string>
    <string name="movie_title">标题</string>
    <string name="movie_year">年代</string>
    <string name="movie_rating">评分</string>
    <string name="movie_director">导演</string>
    <string name="movie_casts">演员</string>
    <string name="watch">观看</string>
    <string name="collect">收藏</string>
    <string name="default_film_name">你生命中的电影</string>
    <string name="default_year">2000</string>
    <string name="author_birdguan">Author: birdguan</string>
    <string name="email_birdguan_seu_edu_cn">Email: birdguan@seu.edu.cn</string>
</resources>
