<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_watched_film"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/icbar_watched"
            android:contentDescription="@string/watched" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_watched_film_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_film_name"/>

            <TextView
                android:id="@+id/tv_watched_film_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/default_year"/>
        </LinearLayout>



        <RatingBar
            android:id="@+id/rb_watched_film"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>





</LinearLayout>